force-app/main/default/objects/MY_Partner__c/fields/autobuild__c.field-meta.xml
<CustomField>
    <fullName>autobuild__c</fullName>
    <defaultValue>false</defaultValue>
    <label>autobuild</label>
    <type>Checkbox</type>
</CustomField>