force-app/main/default/objects/MY_Partner__c/fields/ICCU_Demo__c.field-meta.xml
<CustomField>
    <fullName>ICCU_Demo__c</fullName>
    <label>ICCU Demo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>