force-app/main/default/objects/MY_Partner__c/fields/New_Custom_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Custom_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Custom Value</label>
    <type>Checkbox</type>
</CustomField>