force-app/main/default/objects/MY_Partner__c/fields/Pull_Request_test__c.field-meta.xml
<CustomField>
    <fullName>Pull_Request_test__c</fullName>
    <label>Pull Request test</label>
    <length>30</length>
    <type>Text</type>
</CustomField>