force-app/main/default/objects/MY_Partner__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TELANGANA</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>UP</fullName>
            </value>
            <value>
                <fullName>TEXAS</fullName>
            </value>
            <value>
                <fullName>CALIFORNIA</fullName>
            </value>
            <value>
                <fullName>CHICAGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>